YDAL-90 Update DataFlowCoordinator common logic